--- a/index.jade
+++ b/index.jade
@@ -74,7 +74,7 @@ html(lang='es')
             p
               | Cada año se celebra el día internacional de Nodeschool en el cual las ciudades con capítulos de nodeschool organizamos talleres prácticos para aprender Node y JavaScript, y compartimos a travéz de redes sociales, video streaming y chat. El evento se realiza simultáneamente en diferentes lugares alrededor del mundo, incluyendo: San Francisco, Londres, New York, Moscú, Tel Aviv, París, Lisboa, San Diego, Los Angeles, Austin, San José y entre otras.
             p
-              | El próximo #nodeschool-day se el &nbsp
+              | El próximo #nodeschool-day es el &nbsp
               strong sábado 21 de mayo del 2016
               | . Proveeremos más detalles en los próximos días.
             p
